--- a/src/AdminPages/AdminRARW.module.css
+++ b/src/AdminPages/AdminRARW.module.css
@@ -800,12 +800,14 @@
 }
 
 .Admin-rarw-dropdown-menu::-webkit-scrollbar-track {
-    background: transparent;
+    background: transparent !important;
 }
 
 .Admin-rarw-dropdown-menu::-webkit-scrollbar-thumb {
     background-color: #4EA24E;
     border-radius: 3px;
+    border: 1px solid transparent;
+    background-clip: content-box;
 }
 
 .Admin-rarw-dropdown-menu::-webkit-scrollbar-thumb:hover {
